--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="textColorPrimary">#FFFF9B</color>
     <color name="colorPrimaryDark">#FF6239</color>
     <color name="text">#FFFF9B</color>
+    <color name="white">#FFFFFF</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
