--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,12 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:background="#FF6239"
+    android:background="@color/background"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:padding="16dp"
     tools:context=".LoginActivity">
 
     <!-- Login progress -->
@@ -89,6 +86,18 @@
                 android:text="@string/action_sign_in_short"
                 android:textColor="@color/text"
                 android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sign_up"
+                android:textColor="@color/text"
+                android:layout_gravity="center_horizontal"
+                android:textSize="20sp"
+                android:textStyle="italic"
+                android:layout_marginTop="10dp"
+                android:onClick="SignUp"
+                />
 
 
         </LinearLayout>
