--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,17 @@
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"/>
 
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="79dp">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/robot_comand"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="robot camand" />
+    </android.support.design.widget.TextInputLayout>
+
     <ImageButton
         android:id="@+id/micro_button"
         android:layout_width="wrap_content"
@@ -32,6 +43,12 @@
         android:background="@color/background"
         android:src="@drawable/micro"
         android:layout_gravity="center_horizontal"/>
+
+    <TextView
+        android:id="@+id/Aval_langs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Avaluble languages" />
 
 
 </LinearLayout>
