--- a/app/src/main/res/layout/activity_registrait.xml
+++ b/app/src/main/res/layout/activity_registrait.xml
@@ -3,13 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:background="@color/background"
     android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".LoginActivity">
+    tools:context=".registraitActivity"
+    android:background="@color/background">
 
-    <!-- Login progress -->
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
@@ -22,23 +19,23 @@
         android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <LinearLayout
-            android:id="@+id/email_login_form"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="230dp"
+                android:layout_height="wrap_content"
+                android:text="Registration in \nFINDROID base"
                 android:textSize="45sp"
                 android:textColor="@color/text"
-                android:gravity="center"
-                android:text="@string/findroid"
-                android:textStyle="bold"/>
+                android:gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"/>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
+                android:layout_margin="10dp"
                 android:layout_height="wrap_content">
 
                 <AutoCompleteTextView
@@ -56,6 +53,7 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
+                android:layout_margin="10dp"
                 android:layout_height="wrap_content">
 
                 <EditText
@@ -75,32 +73,16 @@
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
-
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="40dp"
-                android:background="@color/background_button"
-                android:text="@string/action_sign_in_short"
-                android:textColor="@color/text"
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/sign_up_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/sign_up"
-                android:textColor="@color/text"
                 android:layout_gravity="center_horizontal"
-                android:textSize="20sp"
+                android:id="@+id/regist"
+                android:layout_margin="10dp"
+                android:text="Register"
+                android:textColor="@color/text"
+                android:textSize="25sp"
                 android:textStyle="italic"
-                android:background="@color/background"
-                android:layout_marginTop="10dp"
-                android:onClick="SignUp"
-                />
-
+                android:background="@color/background_button"/>
 
         </LinearLayout>
     </ScrollView>
