--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="text">#FFFF9B</color>
     <color name="white">#FFFFFF</color>
     <color name="colorAccent">#FFFFFF</color>
+    <color name="background_button">#FF2F2F</color>
 </resources>
