--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,14 @@
         android:textColor="@color/text"/>
 
     <ImageView
+        android:id="@+id/map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/map"
+        android:layout_gravity="center_horizontal"
         android:layout_margin="10dp"
-        android:layout_gravity="center_horizontal"/>
+        android:clickable="true"
+        android:onClick="onMyButtonClick"
+        android:src="@drawable/map" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
