--- a/app/src/main/res/layout/activity_registrait.xml
+++ b/app/src/main/res/layout/activity_registrait.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content">
 
                 <AutoCompleteTextView
-                    android:id="@+id/email"
+                    android:id="@+id/email_nav"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColorHint="@color/white"
