Added custom chat view for dialog

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,31 +7,41 @@
     android:orientation="vertical"
     android:background="@color/background"
     android:id="@+id/main_layout"
+    xmlns:chatview="http://schemas.android.com/apk/res-auto"
     tools:context=".MainFragment">
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="79dp">
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </android.support.design.widget.TextInputLayout>
+    <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="79dp">-->
 
-    <TextView
-        android:id="@+id/caption_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Voice control"
-        android:textAlignment="center"
-        android:textSize="30sp" />
+        <!--<android.support.design.widget.TextInputLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent" />-->
+    <!--</android.support.design.widget.TextInputLayout>-->
 
-    <TextView
-        android:id="@+id/result_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="30sp" />
+    <!--<TextView-->
+        <!--android:id="@+id/caption_text"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Voice control"-->
+        <!--android:textAlignment="center"-->
+        <!--android:textSize="30sp" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/result_text"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textAlignment="center"-->
+        <!--android:textSize="30sp" />-->
+
+
+  <ga.winterhills.findroid.VoiceChatView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/chat_view">
+
+  </ga.winterhills.findroid.VoiceChatView>
 
 
 </LinearLayout>
