--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/ic_shop_black_24dp"
             android:title="@string/menu_help" />
         <item
+            android:id="@+id/nav_log_out"
+            android:icon="@drawable/img_459386"
+            android:title="@string/menu_log_out" />
+        <item
             android:id="@+id/nav_exit"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:title="@string/menu_exit" />
