--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -65,7 +65,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@id/setEnergy"
-            android:text="15"
+            android:text="5"
             android:textAppearance="?android:attr/textAppearanceLarge" />
         <TextView
             android:layout_width="wrap_content"
@@ -97,8 +97,7 @@
         <EditText
             android:id="@+id/setCity"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="" />
+            android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/buy"
